--- a/components/Home/New Product/newproductlist.module.css
+++ b/components/Home/New Product/newproductlist.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  align-items: center;
   width: 100%;
   padding: 30px 10px;
   /* background-color: yellow; */
