--- a/components/Items/item.module.css
+++ b/components/Items/item.module.css
@@ -39,10 +39,10 @@
     box-shadow: 2px 2px 10px rgb(232, 232, 232);
   }
   .container:hover span {
-    display: contents;
+    opacity: 1;
   }
   .description span {
-    display: none;
+    opacity: 0;
     margin-top: 10px;
   }
 }
