--- a/components/UI/button.module.css
+++ b/components/UI/button.module.css
@@ -8,3 +8,9 @@
   color: white;
   border-radius: 5px;
 }
+
+.button:hover {
+  transform: translateY(-5px);
+  transform: scale(1.1);
+  transition: all 0.3s;
+}
