--- a/components/Items/item.module.css
+++ b/components/Items/item.module.css
@@ -1,5 +1,6 @@
 .container {
-  width: 47%;
+  width: 48%;
+  /* background-color: red; */
   border-radius: 5px;
 }
 
@@ -27,7 +28,7 @@
 .description {
   text-align: start;
   font-weight: 600;
-  padding: 15px;
+  margin-top: 10px;
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
@@ -49,6 +50,9 @@
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+  .description {
+  padding: 15px;
+}
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
