--- a/components/Layout/layout.module.css
+++ b/components/Layout/layout.module.css
@@ -1,5 +1,24 @@
 .main {
   min-height: 100vh;
   position: relative;
-  top: 80px;
+  /* background-color: rgb(195, 195, 195); */
+  top: 60px;
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .main {
+    top: 45px;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .main {
+    top: 70px;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
 }
