--- a/components/Indonesia collections/list.module.css
+++ b/components/Indonesia collections/list.module.css
@@ -14,12 +14,31 @@
 .topFilter .right {
   display: flex;
   gap: 20px;
+  position: relative;
+  /* background-color: red; */
 }
 
 .right span {
   display: flex;
   gap: 5px;
   align-items: center;
+  position: relative;
+  cursor: pointer;
+}
+
+.right .filter {
+  position: absolute;
+  right: 0;
+  top: 30px;
+  z-index: 20;
+  background-color: whitesmoke;
+  width: 150%;
+  padding: 20px 10px;
+}
+
+.filter ul {
+  display: grid;
+  gap: 10px;
 }
 
 .listContainer {
